--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,5 @@
 set -g status-style bg='#151b3d',fg='#8be9fd'
-setw -g window-status-current-style fg=#473a3a,bg=white
+setw -g window-status-current-style fg='#473a3a',bg=white
 
 set -g lock-after-time 60
 set -g lock-command "cmatrix -bs"
