--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,3 +14,5 @@ set -g status-left "#[fg="#3ae84b,bold"]#(~/.tmux_status.sh)"
 set -g status-right "#[fg="#ff2667,bold"]#(~/.tmux_right.sh) "
 
 set-option -g -q mouse on
+
+set-option -g default-shell /usr/bin/zsh
