--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,8 +10,8 @@ set-option -ga terminal-overrides ",screen-256color:Tc"
 set-option -g status-left-length 100
 set-option -g status-right-length 100
 
-set -g status-left "#[fg="#3ae84b,bold"]#(~/.tmux_status.sh)"
-set -g status-right "#[fg="#ff2667,bold"]#(~/.tmux_right.sh) "
+set -g status-left "#[fg="'#3ae84b',bold"]#(~/.tmux_status.sh)"
+set -g status-right "#[fg="'#ff2667',bold"]#(~/.tmux_right.sh) "
 
 set-option -g -q mouse on
 
